--- a/Weine.html
+++ b/Weine.html
@@ -109,7 +109,7 @@ borders: top right bottom left !important
                       </tbody>
                     </table>
                   </div>
-                  <p class="u-text u-text-palette-5-base u-text-1">WEIN</p>
+                  <p class="u-text u-text-palette-5-base u-text-1">Weine</p>
                 </div>
               </div>
             </div>
